SERVER-91788 FLE2 range floating point insertion may cause invariant failure if using precision mode (#24052)

GitOrigin-RevId: df4ea537707cca426558f6ba2f65f067e532c5bc