src/mongo/crypto/fle_numeric.h
@@ -115,7 +115,7 @@ struct OSTType_Decimal128 {
     boost::multiprecision::uint128_t max;
 };
 
-boost::multiprecision::uint128_t toInt128FromDecimal128(Decimal128 dec);
+boost::multiprecision::uint128_t toUInt128FromDecimal128(Decimal128 dec);
 
 OSTType_Decimal128 getTypeInfoDecimal128(Decimal128 value,
                                          boost::optional<Decimal128> min,
@@ -142,5 +142,25 @@ bool canUsePrecisionMode(double min,
                          double max,
                          uint32_t precision,
                          uint32_t* maxBitsOut = nullptr);
+
+/**
+ * Return the first bit set in a integer. 1 indexed.
+ */
+template <typename T>
+inline int getFirstBitSet(T v) {
+    return 64 - countLeadingZeros64(v);
+}
+
+template <>
+inline int getFirstBitSet<boost::multiprecision::uint128_t>(
+    const boost::multiprecision::uint128_t v) {
+    return boost::multiprecision::msb(v) + 1;
+}
+
+template <>
+inline int getFirstBitSet<boost::multiprecision::int128_t>(
+    const boost::multiprecision::int128_t v) {
+    return boost::multiprecision::msb(v) + 1;
+}
 
 }  // namespace mongo
